--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "fb": "^0.7.3",
     "facebook-chat-api": "^1.0.4",
-    "omegle": "^0.1.0",
-    "request": "^2.67.0"
+    "request": "^2.67.0",
+    "triejs": "^0.1.5"
   },
   "devDependencies": {},
   "scripts": {
