--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-  "user": "suriabhinav1997@gmail.com",
-  "pass": "807Crowd"
+  "user": "FB_LOGIN_EMAIL",
+  "pass": "FB_LOGIN_PASSWORD",
+  "name": "Firstname Lastname"
 }
