--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "messenger-notif",
-  "version": "1.0.0",
+  "name": "abhi-bot",
+  "version": "2.0.0",
   "description": "Way to notify yourself in group chats",
   "main": "app.js",
   "dependencies": {
     "fb": "^0.7.3",
     "facebook-chat-api": "^1.0.4",
     "request": "^2.67.0",
-    "triejs": "^0.1.5"
+    "triejs": "^0.1.5",
+    "async": "^0.7.7"
   },
   "devDependencies": {},
   "scripts": {
