--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "user": "suriabhinav1997@gmail.com",
-  "pass": "Ymxm9564",
-  "name": "Smh Munone"
+  "user": "suriabhinav1997@icloud.com",
+  "pass": "807Crowd",
+  "name": "Beebee Ate"
 }
